Fix pixel perfect for intro block for index page on mobile

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -31,7 +31,7 @@
   margin: 0 auto;
 
   position: relative;
-  padding-top: 10px;
+  padding-top: 14px;
   padding-bottom: 15px;
 
   @include md-size {
@@ -71,7 +71,7 @@
 
 .header__nav-toggle {
   position: absolute;
-  top: 20px;
+  top: 26px;
   right: 0;
 
   display: block;
